<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main UI -->
    <string name="app_name">FcxinVoice</string>
    <string name="action_settings">Settings</string>
    <string name="voice_ico">VoiceIco</string>
    <string name="led_ico">LedIco</string>
    <string name="menu_ico">MenuIco</string>
    <string name="app_id">58a419bc</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_upload_Failed">上传热词失败,错误码：</string>    
    <string name="please_start_talking">请开始说话...</string>
    <string name="buffering">正在缓冲</string>
    <string name="failed_init">初始化失败,错误码：</string>
    <string name="login_failed">登录失败</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="tips">友情提示</string>
    <string name="exit_confirm">你确定要退出吗？</string>
    <string name="app_tips">关于</string>
    <string name="app_author">fcxin</string>
    <string name="app_message">智能语音垃圾桶V3.0</string>
    <string name="app_provider">语音技术由科大讯飞提供</string>  
    
    <!-- BluetoothService -->
    <string name="not_supported">设备不支持蓝牙，程序退出</string>
    <string name="bt_not_enabled_leaving">蓝牙未启用,程序退出</string>
    <string name="not_connected">你没有连接到一个设备</string>
    <string name="title_other_devices">其他设备</string>
    <string name="title_not_connected">未连接</string>
    <string name="title_connected_to">已连接: </string>
    <string name="title_connecting">正在连接...</string>
    <string name="connected_to">连接到</string>
    <string name="connected_failed">连接失败</string>
    <string name="connection_break">连接断开</string>

    <!-- DeviceListActivity -->
    <string name="scanning">扫描蓝牙设备...</string>
    <string name="select_device">选择一个设备连接</string>
    <string name="title_paired_devices">已配对的设备</string>
    <string name="title_scanned_devices">扫描到的设备</string>
    <string name="button_scan">扫描设备</string>
    <string name="none_paired">没有已配对设备</string>
    <string name="none_found">没有发现设备</string>

    <!-- Options Menu -->
    <string name="connect">连接一个设备</string>
    <string name="setup">设置</string>
    <string name="discoverable">设置蓝牙可见</string>
    <string name="about">关于</string>
    <string name="exit">程序退出</string>

    <!-- iat language preference -->
    <string name="language_summary">支持：普通话，英语，粤语</string>
    <string name="language_title">语言设置</string>
    
    <!-- 语言 -->
    <string-array name="language_entries">
        <item>普通话</item>
        <item>英语</item>
        <item>粤语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>en_us</item>
        <item>cantonese</item>
    </string-array>
    
    <string name="paired">paired</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>

</resources>