<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout2"
        android:layout_width="130dip"
        android:layout_height="215dip"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/img_popupmenu_bg"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/listview_selectbg_item"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_search"
                android:visibility="gone" />

            <TextView
                android:id="@+id/manualTv"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="13dp"
                android:gravity="center"
                android:text="@string/connect"
                android:textColor="@color/gray"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@color/grey300" />

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/listview_selectbg_item"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_preferences"
                android:visibility="gone" />

            <TextView
                android:id="@+id/gravityTv"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="13dp"
                android:gravity="center"
                android:text="@string/setup"
                android:textColor="@color/gray"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@color/grey300" />

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/listview_selectbg_item"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_mylocation"
                android:visibility="gone" />

            <TextView
                android:id="@+id/line_FollowerTv"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="13dp"
                android:gravity="center"
                android:text="@string/discoverable"
                android:textColor="@color/gray"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@color/grey300" />

        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/listview_selectbg_item"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_info_details"
                android:visibility="gone" />

            <TextView
                android:id="@+id/line_FollowerTv1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="13dp"
                android:gravity="center"
                android:text="@string/about"
                android:textColor="@color/gray"
                android:textSize="16sp" />
        </LinearLayout>
        
        
                <View
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@color/grey300" />

        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/listview_selectbg_item"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="gone" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="13dp"
                android:gravity="center"
                android:text="@string/exit"
                android:textColor="@color/gray"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>